--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,11 +40,8 @@
         {% endif %}
       {% endif%}
       </p>
-          <!-- Please don't remove this, keep my open source work credited :) -->
-    <p class="theme-by text-muted">
-      Theme by
-      <a href="https://deanattali.com/beautiful-jekyll/">beautiful-jekyll</a>
-    </p>
+      <p class="theme-by text-muted">Thanks to Jekyll</p>
+
       </div>
     </div>
   </div>
