--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
           {%- endfor -%}
         </ul>
       <p class="copyright text-muted">
-      {{ site.author.name }}
+      {{ site.author.name }} &amp; special thanks to Jekyll
       &nbsp;&bull;&nbsp;
       {{ site.time | date: '%Y' }}
 
@@ -40,8 +40,6 @@
         {% endif %}
       {% endif%}
       </p>
-      <p class="theme-by text-muted">Thanks to Jekyll</p>
-
       </div>
     </div>
   </div>
