--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,6 +7,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
+      <style type="text/css">
+      .navbar-header a.navbar-brand:hover,.navbar-header a.navbar-brand:focus{color: #f44336;}
+      </style>
       {% if site.title-img %}
         <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}"><img src="{{ site.title-img }}"/></a>
       {% else %}
