--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,6 +9,7 @@
       </button>
       <style type="text/css">
       .navbar-header a.navbar-brand:hover,.navbar-header a.navbar-brand:focus{color: #f44336;}
+      .navbar-default .navbar-toggle span.icon-bar{background-color: #fff !important;}
       </style>
       {% if site.title-img %}
         <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}"><img src="{{ site.title-img }}"/></a>
